--- a/.github/workflows/dreamhost.yml
+++ b/.github/workflows/dreamhost.yml
@@ -16,7 +16,7 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./
+          local-dir: ./${{ secrets.THEME_NAME }}/
           server-dir: ${{ secrets.FTP_SERVER }}/wp-content/themes/${{ secrets.THEME_NAME }}/
           protocol: ftp
           security: loose
